<resources>
    <string name="app_name">Rudraksh Food</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="home">home</string>
    <string name="gujarati_food">Gujarati Food</string>
    <string name="punjabi_food">Punjabi Food</string>
    <string name="jain_food">Jain Food</string>
    <string name="food">Food</string>
    <string name="photos">Photos</string>
    <string name="sevice">Service</string>
    <string name="contact">Contact</string>
    <string name="menu">Menu</string>
    <string name="veg_curries">2 vegetable curries</string>
    <string name="dall">Dall</string>
    <string name="rice">Rice</string>
    <string name="roties">5 Roties</string>
    <string name="slad_papad">Salad , Papad , Butter Milk</string>
    <string name="order_now">Order Now</string>
    <string name="paratha">4 Parathas</string>
    <string name="offers">Offers</string>
    <string name="services">Services</string>
    <string name="paying_guest">Paying Guest</string>
    <string name="rudraksh">Rudraksh</string>
    <string name="food_service">Food Service</string>
    <string name="mukesh_bhai">Mukeshbhai (9409409408)</string>
    <string name="naresh_bhai">Nareshbhai (8866660906)</string>
    <string name="contact_us">Contact Us</string>
    <string name="mukesh_91_9409409408">+91-9409409408</string>
    <string name="naresh_91_8866660906">+91-8866660906</string>
    <string name="rudraksh_food_service">Rudraksh Food Service</string>
    <string name="user_name">User Name</string>
    <string name="order_food">Order Food</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="flat_no">Flat No , Street</string>
    <string name="area_name">Area Name(C.G Road)</string>
    <string name="landmark">Landmark</string>
    <string name="address">Address</string>
    <string name="gujarathi_thali">Gujarati Thali</string>
    <string name="punjabi_thali">Punjabi Thali</string>
    <string name="jain_thali">Jain Thali</string>
    <string name="thali_contains">Thali Contains</string>
    <string name="items_included">Items Included</string>
    <string name="Rs">\u20B9</string>
    <string name="total">Total:</string>
    <string name="zero">0</string>
    <string name="enter_valid_mobile">Enter valid mobile number</string>
    <string name="enter_mobile">Mobile Number is empty</string>
    <string name="enter_name">Name is empty</string>
    <string name="address_empty">Address is empty</string>
    <string name="no_emial_client">There is no email client installed.</string>
    <string name="your_total_bill">Your total bill</string>
    <string name="select_items">Select Items</string>

    <string name="offer_1">\u2022 In same office, building or society 5 or less than 10 Tiffin service will get 10% discount to each members.</string>
    <string name="offer_2">\u2022 In same office, building or society 10 or less than 15 Tiffin service will get 15% discount to each members.</string>
    <string name="offer_3">\u2022 In same office, building or society 15 or less than 20 Tiffin service will get 20% discount to each members.</string>
    <string name="offer_4">\u2022 In same office, building or society 15 or less than 25 Tiffin service will get 25% discount to each members.</string>
    <string name="photo_gallery">Photo Gallery</string>

    <string name="share_via">Share via</string>
    <string name="share_text">Check out this Rudraksh Food Service</string>
    <string name="share_propery_subject">Property on Rudraksh Food Service App</string>
    <string name="single_share">Single Share</string>
    <string name="two_sharing">Two Sharing</string>
    <string name="three_sharing">Three Sharing</string>
    <string name="one_sharing">One Sharing</string>
    <string name="alarm_text">Do you want to oreder food from Rudraksh?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    <string name="extra_roti">Roti</string>
    <string name="extra_roti_price">\u20B9 10</string>
    <string name="extra_curry">Vegetable Curry</string>
    <string name="extra_curry_price">\u20B9 50</string>
    <string name="extra_buttermilk_price">\u20B9 10</string>
    <string name="extra_dal">Dal</string>
    <string name="extra_pulse">Extra Pulses</string>
    <string name="extra_rice">Rice</string>
    <string name="extra_buttermilk">Buttermilk</string>
    <string name="cart_item">1</string>

    <string name="extras">Extras</string>
    <string name="no_one_sharing">One sharing not available at the moment</string>
    <string name="no_three_sharing">Three sharing not available at the moment</string>
    <string name="no_two_sharing">Two sharing not available at the moment</string>
    <string name="facilities">Facilities</string>
    <string name="morning_evening_tea">\u2022  Morning , Evening Tea</string>
    <string name="breakfast_lunch_dinner">\u2022  Breakfast , Lunch , Dinner</string>
    <string name="room_and_toilet_cleaning">\u2022  Room and Toilet Cleaning</string>
    <string name="t_v_wifi_fridge_water_filter">\u2022  T.V , Wifi , Fridge , Water Filter</string>
    <string name="almirah_with_locker">\u2022  Almirah with locker</string>
    <string name="connect_to_internet">Connect to Internet</string>
    <string name="submit">Submit</string>
    <string name="order_time">Order Time</string>
    <string name="check_availability">Check Availability</string>
    <string name="check">Check</string>
    <string name="not_available_pin_code">Not available with given pin code</string>
    <string name="available_food">"Available with given pin code "</string>
    <string name="thank_you_dialog">Thank you for ordering from Rudraksh, your order will be deliverd within 45 min.</string>
    <string name="ok">OK</string>
    <string name="offers_not_found">Offers Not Found</string>
    <string name="email">Email</string>
    <string name="pin_code">Pin Code</string>
</resources>
