<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_margin="@dimen/ten_dp"
        app:cardElevation="@dimen/five_dp">

        <com.rudraksh.food.widgets.AppTextView
            style="@style/semi_bold"
            android:id="@+id/fragment_offer_tv_offer1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:text="@string/offer_1"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteen_sp"/>
        <com.rudraksh.food.widgets.AppTextView
            style="@style/semi_bold"
            android:id="@+id/fragment_offer_tv_offer2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:text="@string/offer_2"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteen_sp"/>
        <com.rudraksh.food.widgets.AppTextView
            style="@style/semi_bold"
            android:id="@+id/fragment_offer_tv_offer3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:text="@string/offer_3"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteen_sp"/>

        <com.rudraksh.food.widgets.AppTextView
            style="@style/semi_bold"
            android:id="@+id/fragment_offer_tv_offer4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:text="@string/offer_4"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteen_sp"/>


    </LinearLayout>

</android.support.v7.widget.CardView>