<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.rudraksh.food.widgets.AppTextView
            style="@style/extra_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:gravity="center"
            android:text="@string/rudraksh"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty_four_sp" />

        <com.rudraksh.food.widgets.AppTextView
            style="@style/semi_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:layout_marginStart="@dimen/ten_dp"
            android:gravity="center"
            android:text="@string/food_service"
            android:textColor="@color/black"
            android:textSize="@dimen/sixteen_sp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/sixty_dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fifty_dp"
            app:cardElevation="@dimen/five_dp">

            <com.rudraksh.food.widgets.AppButton
                android:id="@+id/frament_contact_btn_mukesh"
                style="@style/semi_bold"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sixty_dp"
                android:background="@color/green"
                android:paddingStart="@dimen/thirty_dp"
                android:drawableStart="@drawable/ic_phone"
                android:text="@string/mukesh_bhai"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/eighteen_sp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/sixty_dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sixty_dp"
            app:cardElevation="@dimen/five_dp">

            <com.rudraksh.food.widgets.AppButton
                android:id="@+id/frament_contact_btn_naresh"
                style="@style/semi_bold"
                android:layout_width="match_parent"
                android:layout_height="@dimen/sixty_dp"
                android:background="@color/green"
                android:text="@string/naresh_bhai"
                android:paddingStart="@dimen/thirty_dp"
                android:drawableStart="@drawable/ic_phone"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/eighteen_sp" />

        </android.support.v7.widget.CardView>
    </LinearLayout>
</RelativeLayout>
