<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="@dimen/five_dp">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/fargment_food_detail_coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="@dimen/five_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fragment_food_detail_iv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/one_fifty_dp"
                android:contentDescription="@null"
                android:visibility="visible"
                android:src="@drawable/gujarathi_thali" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.rudraksh.food.widgets.AppTextView
                        style="@style/extra_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/ten_dp"
                        android:padding="@dimen/ten_dp"
                        android:text="@string/items_included"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sixteen_sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginBottom="@dimen/five_dp"
                        android:layout_marginTop="@dimen/five_dp"
                        android:background="@color/gray" />

                    <com.rudraksh.food.widgets.AppTextView
                        android:id="@+id/fragment_food_detail_tv_roties"
                        style="@style/semi_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/ten_dp"
                        android:text="@string/roties"
                        android:textColor="@color/black"
                        android:textSize="@dimen/eighteen_sp" />

                    <com.rudraksh.food.widgets.AppTextView
                        style="@style/semi_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/ten_dp"
                        android:text="@string/veg_curries"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sixteen_sp" />

                    <com.rudraksh.food.widgets.AppTextView
                        style="@style/semi_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/ten_dp"
                        android:text="@string/dall"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sixteen_sp" />

                    <com.rudraksh.food.widgets.AppTextView
                        style="@style/semi_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/ten_dp"
                        android:text="@string/rice"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sixteen_sp" />

                    <com.rudraksh.food.widgets.AppTextView
                        style="@style/semi_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/ten_dp"
                        android:text="@string/slad_papad"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sixteen_sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/ten_dp"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:weightSum="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/fragment_food_iv_plus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="center"
                            android:src="@drawable/ic_add"
                            android:background="@drawable/circle"
                            android:layout_gravity="center|start"/>
                        <com.rudraksh.food.widgets.AppTextView
                            android:id="@+id/fragment_food_tv_total_quantity"
                            style="@style/semi_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/zero"
                            android:layout_weight="0.2"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sixteen_sp"/>
                        <ImageView
                            android:id="@+id/fragment_food_iv_minus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="center"
                            android:src="@drawable/ic_minus_circle"
                            android:background="@drawable/circle"
                            android:layout_gravity="center|start"/>
                        <com.rudraksh.food.widgets.AppTextView
                            style="@style/semi_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="end"
                            android:layout_weight="0.5"
                            android:textSize="@dimen/fourteen_sp"
                            android:textColor="@color/black"
                            android:text="@string/total"/>
                        <com.rudraksh.food.widgets.AppTextView
                            android:id="@+id/fragment_food_tv_total_price"
                            style="@style/semi_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_weight="0.3"
                            android:textSize="@dimen/sixteen_sp"
                            android:textColor="@color/black"
                            android:text="@string/zero"/>

                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_dp">

                <com.rudraksh.food.widgets.AppButton
                    android:id="@+id/fragment_food_detail_btn_order"
                    style="@style/semi_bold"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fifty_dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/green"
                    android:text="@string/order_now"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sixteen_sp" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.design.widget.CoordinatorLayout>
</ScrollView>