<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/fragment_food_type_cv_gujarati"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        app:cardElevation="@dimen/five_dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:alpha="0.5"
                android:scaleType="centerCrop"
                android:src="@drawable/gujarati_menu" />

            <com.rudraksh.food.widgets.AppTextView
                style="@style/semi_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/gujarati_food"
                android:textColor="@color/white"
                android:textSize="@dimen/eighteen_sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/fragment_food_type_cv_punjabi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        app:cardElevation="@dimen/five_dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:scaleType="centerCrop"
                android:src="@drawable/punjabi_menu" />

            <com.rudraksh.food.widgets.AppTextView
                style="@style/semi_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/punjabi_food"
                android:textColor="@color/white"
                android:textSize="@dimen/eighteen_sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/fragment_food_type_cv_jain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_marginStart="@dimen/ten_dp"
        android:layout_marginEnd="@dimen/ten_dp"
        app:cardElevation="@dimen/five_dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:scaleType="centerCrop"
                android:src="@drawable/jain_menu" />

            <com.rudraksh.food.widgets.AppTextView
                style="@style/semi_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/jain_food"
                android:textColor="@color/white"
                android:textSize="@dimen/eighteen_sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
